--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-feature android:name="android.hardware.sensor.stepcounter"/>
     <uses-feature android:name="feature:android.hardware.sensor.stepdetector"/>
 
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
+    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
